--- a/public/compras/pages/solicitudes/solicitudes.html
+++ b/public/compras/pages/solicitudes/solicitudes.html
@@ -43,6 +43,7 @@
                 <option>Enviada al Supervisor</option>
                 <option>Compra realizada</option>
                 <option>Completada</option>
+                <option>Cancelada</option>
               </select>
             </label>
             <div>
