Actualizar compras y solicitudes

--- a/public/compras/pages/compras/compras.html
+++ b/public/compras/pages/compras/compras.html
@@ -17,7 +17,7 @@
           <div class="title">
             <div class="muted" style="font-weight: 900; letter-spacing: 0.6px;">COMPRAS</div>
             <h1>Solicitudes</h1>
-            <p>Pendientes · Enviadas · Compra realizada</p>
+            <p>Pendientes  Enviadas  Completadas</p>
           </div>
           <div style="display:flex;gap:10px;align-items:center;">
             <button class="btn" id="setComprasTokenBtn" type="button">Modo compras</button>
@@ -38,14 +38,14 @@
                   <div class="v" id="countSent">0</div>
                 </div>
                 <div class="kpi-mini done">
-                  <div class="k">Compra realizada</div>
+                  <div class="k">Completadas</div>
                   <div class="v" id="countDone">0</div>
                 </div>
               </div>
-              <div class="muted" style="font-size:12px;">Indicador de color al final según estado.</div>
+              <div class="muted" style="font-size:12px;">Indicador de color al final segun estado.</div>
             </div>
 
-            <div id="comprasList" class="list-body">Cargando…</div>
+            <div id="comprasList" class="list-body">Cargando...</div>
           </div>
         </section>
       </main>
@@ -56,3 +56,5 @@
     <script src="compras.js"></script>
   </body>
 </html>
+
+
