--- a/public/compras/pages/panel-compras/panel-compras.html
+++ b/public/compras/pages/panel-compras/panel-compras.html
@@ -24,28 +24,28 @@
         <section class="grid">
           <div class="card kpi border-blue" style="grid-column: span 3;">
             <div class="label">Total</div>
-            <div class="value" id="kpiTotal">—</div>
+            <div class="value" id="kpiTotal">-</div>
           </div>
           <div class="card kpi border-amber" style="grid-column: span 3;">
             <div class="label">Pendientes</div>
-            <div class="value" id="kpiPending">—</div>
+            <div class="value" id="kpiPending">-</div>
           </div>
           <div class="card kpi border-green" style="grid-column: span 3;">
             <div class="label">Enviadas al Supervisor</div>
-            <div class="value" id="kpiSent">—</div>
+            <div class="value" id="kpiSent">-</div>
           </div>
           <div class="card kpi border-gray" style="grid-column: span 3;">
             <div class="label">Completadas</div>
-            <div class="value" id="kpiCompleted">—</div>
+            <div class="value" id="kpiCompleted">-</div>
           </div>
 
           <div class="card" style="grid-column: span 7;">
             <h2>Actividad reciente</h2>
-            <div id="recentActivity" class="muted">Cargando…</div>
+            <div id="recentActivity" class="muted">Cargando...</div>
           </div>
 
           <div class="card" style="grid-column: span 5;">
-            <h2>Acciones rápidas</h2>
+            <h2>Acciones rapidas</h2>
             <div class="split">
               <div class="card" style="box-shadow: none; background: rgba(255, 255, 255, 0.55);">
                 <div style="display: flex; gap: 12px; align-items: flex-start;">
@@ -118,3 +118,5 @@
     <script src="panel-compras.js"></script>
   </body>
 </html>
+
+
