--- a/public/compras/pages/solicitudes/solicitudes.html
+++ b/public/compras/pages/solicitudes/solicitudes.html
@@ -17,7 +17,7 @@
           <div class="title">
             <div class="muted" style="font-weight: 900; letter-spacing: 0.6px;">SOLICITUDES</div>
             <h1>Solicitudes de compra</h1>
-            <p>Lista con filtros por tienda, estado y búsqueda.</p>
+            <p>Lista con filtros por tienda, estado y busqueda.</p>
           </div>
           <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva solicitud</a>
         </div>
@@ -25,25 +25,25 @@
         <section class="card">
           <form id="filtersForm" class="filters">
             <label>
-              Búsqueda
-              <input id="filterQ" placeholder="cliente / código / link" />
+              Busqueda
+              <input id="filterQ" placeholder="cliente / codigo / link" />
             </label>
             <label>
               Tienda
               <select id="filterStore">
-                <option value="">Cargando…</option>
+                <option value="">Cargando...</option>
               </select>
             </label>
             <label>
               Estado
               <select id="filterStatus">
                 <option value="">Todos</option>
-                <option>Borrador</option>
-                <option>Pendiente comprobante</option>
-                <option>Enviada al Supervisor</option>
-                <option>Compra realizada</option>
-                <option>Completada</option>
-                <option>Cancelada</option>
+                <option value="pending">Pendiente</option>
+                <option value="sent_to_supervisor">Enviada al Supervisor</option>
+                <option value="completed">Completada</option>
+                <option value="approved">Aprobada</option>
+                <option value="rejected">Rechazada</option>
+                <option value="cancelled">Cancelada</option>
               </select>
             </label>
             <div>
@@ -51,7 +51,7 @@
             </div>
           </form>
 
-          <div id="requestsTable" class="muted">Cargando…</div>
+          <div id="requestsTable" class="muted">Cargando...</div>
           <div id="pager"></div>
         </section>
       </main>
@@ -62,3 +62,5 @@
     <script src="solicitudes.js"></script>
   </body>
 </html>
+
+
