--- a/public/compras/pages/compras/compras.html
+++ b/public/compras/pages/compras/compras.html
@@ -3,57 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PGT - Compras</title>
+    <title>PGT - Solicitudes de compra</title>
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="compras.css" />
+    <meta http-equiv="refresh" content="0; url=../solicitudes-compra/solicitudes-compra.html" />
   </head>
-  <body data-page="compras">
+  <body data-page="solicitudes-compra">
     <div class="app">
-      <aside class="sidebar">
-      </aside>
-
+      <aside class="sidebar"></aside>
       <main class="main">
-        <div class="topbar">
-          <div class="title">
-            <div class="muted" style="font-weight: 900; letter-spacing: 0.6px;">COMPRAS</div>
-            <h1>Solicitudes</h1>
-            <p>Pendientes  Enviadas  Completadas</p>
-          </div>
-          <div style="display:flex;gap:10px;align-items:center;">
-            <button class="btn" id="setComprasTokenBtn" type="button">Modo compras</button>
-            <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva solicitud</a>
-          </div>
+        <div class="card">
+          <h2>Redireccionando...</h2>
+          <p>Si no redirige automaticamente, haz clic abajo.</p>
+          <a class="btn" href="../solicitudes-compra/solicitudes-compra.html">Ir a Solicitudes de compra</a>
         </div>
-
-        <section class="grid" style="grid-template-columns: 1fr;">
-          <div class="card">
-            <div class="list-head">
-              <div class="list-kpis">
-                <div class="kpi-mini pending">
-                  <div class="k">Pendientes</div>
-                  <div class="v" id="countPending">0</div>
-                </div>
-                <div class="kpi-mini sent">
-                  <div class="k">Enviadas</div>
-                  <div class="v" id="countSent">0</div>
-                </div>
-                <div class="kpi-mini done">
-                  <div class="k">Completadas</div>
-                  <div class="v" id="countDone">0</div>
-                </div>
-              </div>
-              <div class="muted" style="font-size:12px;">Indicador de color al final segun estado.</div>
-            </div>
-
-            <div id="comprasList" class="list-body">Cargando...</div>
-          </div>
-        </section>
       </main>
     </div>
-
     <script src="../../shared/layout.js"></script>
-    <script src="../../shared/api.js"></script>
-    <script src="compras.js"></script>
   </body>
 </html>
 
