--- a/public/compras/pages/panel-compras/panel-compras.html
+++ b/public/compras/pages/panel-compras/panel-compras.html
@@ -13,99 +13,95 @@
       </aside>
 
       <main class="main">
-        <div class="topbar">
-          <div class="title">
-            <div class="muted" style="font-weight: 900; letter-spacing: 0.6px;">PANEL DE COMPRAS</div>
-            <h1>Panel de compras</h1>
+        <div class="topbar hero">
+          <div class="title hero-title">
+            <div class="muted kicker">PANEL · SOLICITUDES DE COMPRA</div>
+            <h1>Control y seguimiento</h1>
+            <p>Resumen de estado, actividad reciente y accesos rápidos.</p>
+            <div class="hero-meta">
+              <div class="meta-chip">Actualizado en tiempo real</div>
+              <div class="meta-chip">Operaciones BASIC</div>
+            </div>
           </div>
-          <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva solicitud</a>
+          <div class="hero-actions">
+            <a class="btn ghost" href="../solicitudes-compra/solicitudes-compra.html">Ver solicitudes</a>
+            <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva solicitud</a>
+          </div>
         </div>
 
-        <section class="grid">
-          <div class="card kpi border-blue" style="grid-column: span 3;">
+        <section class="kpi-grid">
+          <div class="card kpi-card kpi-total">
             <div class="label">Total</div>
             <div class="value" id="kpiTotal">-</div>
+            <div class="kpi-foot">Solicitudes registradas</div>
           </div>
-          <div class="card kpi border-amber" style="grid-column: span 3;">
+          <div class="card kpi-card kpi-pending">
             <div class="label">Pendientes</div>
             <div class="value" id="kpiPending">-</div>
+            <div class="kpi-foot">Esperando comprobante</div>
           </div>
-          <div class="card kpi border-green" style="grid-column: span 3;">
+          <div class="card kpi-card kpi-sent">
             <div class="label">Enviadas al Supervisor</div>
             <div class="value" id="kpiSent">-</div>
+            <div class="kpi-foot">En revision</div>
           </div>
-          <div class="card kpi border-gray" style="grid-column: span 3;">
+          <div class="card kpi-card kpi-done">
             <div class="label">Completadas</div>
             <div class="value" id="kpiCompleted">-</div>
+            <div class="kpi-foot">Compra finalizada</div>
           </div>
+        </section>
 
-          <div class="card" style="grid-column: span 7;">
-            <h2>Actividad reciente</h2>
+        <section class="content-grid">
+          <div class="card activity-card">
+            <div class="card-head">
+              <h2>Actividad reciente</h2>
+              <div class="muted">Ultimas acciones registradas.</div>
+            </div>
             <div id="recentActivity" class="muted">Cargando...</div>
           </div>
 
-          <div class="card" style="grid-column: span 5;">
-            <h2>Acciones rapidas</h2>
-            <div class="split">
-              <div class="card" style="box-shadow: none; background: rgba(255, 255, 255, 0.55);">
-                <div style="display: flex; gap: 12px; align-items: flex-start;">
-                  <div
-                    class="ico"
-                    style="
-                      width: 42px;
-                      height: 42px;
-                      border-radius: 999px;
-                      background: rgba(239, 68, 68, 0.12);
-                    "
-                  >
-                    <svg viewBox="0 0 24 24" fill="none" aria-hidden="true" style="width: 22px; height: 22px;">
-                      <path
-                        d="M12 5v14M5 12h14"
-                        stroke="currentColor"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                    </svg>
-                  </div>
-                  <div>
-                    <div style="font-weight: 900; font-size: 18px;">Crear solicitud</div>
-                    <div class="muted">Completa los datos obligatorios y adjunta las evidencias.</div>
-                    <div style="margin-top: 10px;">
-                      <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva solicitud</a>
-                    </div>
-                  </div>
+          <div class="card actions-card">
+            <div class="card-head">
+              <h2>Acciones rapidas</h2>
+              <div class="muted">Atajos para el flujo diario.</div>
+            </div>
+            <div class="actions-stack">
+              <div class="action-item">
+                <div class="action-ico danger">
+                  <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path
+                      d="M12 5v14M5 12h14"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
+                <div class="action-body">
+                  <div class="action-title">Crear solicitud</div>
+                  <div class="muted">Completa los datos obligatorios y adjunta evidencias.</div>
+                </div>
+                <a class="btn primary" href="../nueva-solicitud/nueva-solicitud.html">Nueva</a>
               </div>
-              <div class="card" style="box-shadow: none; background: rgba(255, 255, 255, 0.55);">
-                <div style="display: flex; gap: 12px; align-items: flex-start;">
-                  <div
-                    class="ico"
-                    style="
-                      width: 42px;
-                      height: 42px;
-                      border-radius: 999px;
-                      background: rgba(59, 130, 246, 0.12);
-                    "
-                  >
-                    <svg viewBox="0 0 24 24" fill="none" aria-hidden="true" style="width: 22px; height: 22px;">
-                      <path
-                        d="M8 6h13M8 12h13M8 18h13M3 6h1M3 12h1M3 18h1"
-                        stroke="currentColor"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                    </svg>
-                  </div>
-                  <div>
-                    <div style="font-weight: 900; font-size: 18px;">Revisar solicitudes</div>
-                    <div class="muted">Filtra por estado y descarga los comprobantes.</div>
-                    <div style="margin-top: 10px;">
-                      <a class="btn" href="../solicitudes/solicitudes.html">Ver solicitudes</a>
-                    </div>
-                  </div>
+              <div class="action-item">
+                <div class="action-ico info">
+                  <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path
+                      d="M8 6h13M8 12h13M8 18h13M3 6h1M3 12h1M3 18h1"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
+                <div class="action-body">
+                  <div class="action-title">Revisar solicitudes</div>
+                  <div class="muted">Filtra por estado y descarga comprobantes.</div>
+                </div>
+                <a class="btn ghost" href="../solicitudes-compra/solicitudes-compra.html">Ir</a>
               </div>
             </div>
           </div>
