--- a/public/compras/solicitudes.html
+++ b/public/compras/solicitudes.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PGT - Solicitudes</title>
     <link rel="icon" href="/favicon.ico" />
-    <meta http-equiv="refresh" content="0; url=pages/solicitudes/solicitudes.html" />
+    <meta http-equiv="refresh" content="0; url=pages/solicitudes-compra/solicitudes-compra.html" />
   </head>
   <body>
-    <a href="pages/solicitudes/solicitudes.html">Ir a solicitudes</a>
+    <a href="pages/solicitudes-compra/solicitudes-compra.html">Ir a solicitudes de compra</a>
   </body>
 </html>
