fix: ajustes compras

--- a/public/compras/pages/panel-compras/panel-compras.html
+++ b/public/compras/pages/panel-compras/panel-compras.html
@@ -41,7 +41,7 @@
             <div class="kpi-foot">Esperando comprobante</div>
           </div>
           <div class="card kpi-card kpi-sent">
-            <div class="label">Enviadas al Supervisor</div>
+            <div class="label">En proceso</div>
             <div class="value" id="kpiSent">-</div>
             <div class="kpi-foot">En revision</div>
           </div>
