--- a/public/compras/pages/solicitudes-compra/solicitudes-compra.html
+++ b/public/compras/pages/solicitudes-compra/solicitudes-compra.html
@@ -43,11 +43,8 @@
               <select id="filterStatus">
                 <option value="">Todos</option>
                 <option value="pending">Pendiente</option>
-                <option value="sent_to_supervisor">Enviada al Supervisor</option>
+                <option value="sent_to_supervisor">En proceso</option>
                 <option value="completed">Completada</option>
-                <option value="approved">Aprobada</option>
-                <option value="rejected">Rechazada</option>
-                <option value="cancelled">Cancelada</option>
               </select>
             </label>
             <div class="filters-actions">
