feat: separar frontend y backend (api base configurable + cors)

--- a/public/compras/pages/panel-compras/panel-compras.html
+++ b/public/compras/pages/panel-compras/panel-compras.html
@@ -110,9 +110,9 @@
     </div>
 
     <script src="../../shared/layout.js"></script>
+    <script src="../../shared/config.js"></script>
     <script src="../../shared/api.js"></script>
     <script src="panel-compras.js"></script>
   </body>
 </html>
-
 
