--- a/public/compras/pages/solicitudes-compra/solicitudes-compra.html
+++ b/public/compras/pages/solicitudes-compra/solicitudes-compra.html
@@ -62,9 +62,9 @@
     </div>
 
     <script src="../../shared/layout.js"></script>
+    <script src="../../shared/config.js"></script>
     <script src="../../shared/api.js"></script>
     <script src="solicitudes-compra.js"></script>
   </body>
 </html>
-
 
