--- a/public/compras/pages/detalle-solicitud/detalle-solicitud.html
+++ b/public/compras/pages/detalle-solicitud/detalle-solicitud.html
@@ -83,9 +83,9 @@
     </div>
 
     <script src="../../shared/layout.js"></script>
+    <script src="../../shared/config.js"></script>
     <script src="../../shared/api.js"></script>
     <script src="detalle-solicitud.js"></script>
   </body>
 </html>
-
 
