--- a/public/compras/pages/nueva-solicitud/nueva-solicitud.html
+++ b/public/compras/pages/nueva-solicitud/nueva-solicitud.html
@@ -284,11 +284,11 @@
     </div>
 
     <script src="../../shared/layout.js"></script>
+    <script src="../../shared/config.js"></script>
     <script src="../../shared/api.js"></script>
     <script src="nueva-solicitud.js"></script>
   </body>
 </html>
-
 
 
 
