Mejoras compras y recibos

--- a/public/compras/pages/nueva-solicitud/nueva-solicitud.html
+++ b/public/compras/pages/nueva-solicitud/nueva-solicitud.html
@@ -161,7 +161,7 @@
                       </div>
                       <div class="dz-title">Capturas de cotizacion</div>
                       <div class="dz-sub" id="metaScreenshots">Pega (Ctrl+V) o doble click para seleccionar</div>
-                      <input id="quoteScreenshots" class="dz-input" type="file" multiple />
+                      <input id="quoteScreenshots" class="dz-input" type="file" multiple accept=".pdf,image/*" />
                     </div>
 
                     <div class="dropzone" data-input="paymentProof" role="button" tabindex="0">
@@ -179,7 +179,7 @@
                       </div>
                       <div class="dz-title">Comprobante</div>
                       <div class="dz-sub" id="metaPaymentProof">Pega (Ctrl+V) o doble click para seleccionar</div>
-                      <input id="paymentProof" class="dz-input" type="file" />
+                      <input id="paymentProof" class="dz-input" type="file" accept=".pdf,image/*" />
                     </div>
                   </div>
 
